--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -76,7 +76,7 @@
 
 % theorems
 \theoremstyle{plain}
-\newtheorem{thm}{Theorem}
+\newtheorem{thm}{Theorem}[chapter]
 \newtheorem{lemma}[thm]{Lemma}
 \newtheorem{prop}[thm]{Proposition}
 \newtheorem{cor}{Corollary}[thm]
