--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -7,7 +7,10 @@
 \begin{dfn}[Category]\label{def:category}
 	A \emph{category} $\cat{C}$ consists of the following data:
 	\begin{itemize}
-		\item a collection\footnotemark{} of objects, overloadingly also called $\cat{C}$;
+		\item a collection\note{We use the word \emph{collection} for foundational reasons: in
+			      many important examples, the objects and morphisms do not form sets. We ignore
+			      such foundational issues here; they are discussed in~\cite[Section
+				      1.6]{maclane-1971}.} of objects, overloadingly also called $\cat{C}$;
 		\item for each pair of objects $x,y \in  \cat{C}$, a collection of \emph{morphisms} $\cat{C}(x, y)$;
 		\item for each object $x \in \cat{C}$, a designated \emph{identity morphism} $x \xrightarrow{1_x}  x$;
 		\item for each pair of morphisms $x \xrightarrow{f}  y \xrightarrow{g}  z$, a designated \emph{composite morphism} $x \xrightarrow{gf}  z$.
@@ -17,12 +20,25 @@
 		\item \emph{unitality}: for any $x \xrightarrow{f}  y$, $1_yf = f = f1_x$;
 		\item \emph{associativity}: for any $x \xrightarrow{f} 		y \xrightarrow{g} z \xrightarrow{h} w$, $(hg)f = h(gf)$.
 	\end{itemize}
+	\begin{fig}[H]
+		\centering
+		\begin{tikzcd}
+			x\ar[r, "f"]\ar[rr, "gf", bend left=60] &
+			y\ar[r, "g"]\ar[rr, "hg"', bend right=60] &
+			z\ar[r, "h"] & w
+		\end{tikzcd}
+		\begin{tikzcd}
+			x\ar[r, "1_x"]\ar[rd, "f"'] & x\ar[d, "f"] \\
+			& y
+		\end{tikzcd}
+		\begin{tikzcd}
+			x\ar[r, "f"]\ar[rd, "f"'] & y\ar[d, "1_y"] \\
+			& y\punctuation{.}
+		\end{tikzcd}
+		\caption{The category axioms.}
+		\label{fig:category axioms}
+	\end{fig}
 \end{dfn}
-
-\footnotetext{We use the word \emph{collection} for foundational reasons: in
-	many important examples, the objects and morphisms do not form sets. We ignore
-	such foundational issues here; they are discussed in~\cite[Section
-		1.6]{maclane-1971}.}
 
 \noindent
 Categories are widespread in mathematics, as the following examples show.
@@ -77,30 +93,13 @@ symbolic equalities of \Cref{def:category}. The key idea is that such diagrams
 can be ``pasted'', allowing us to build up complex equalities from simpler ones.
 
 \begin{dfn}[Commutative Diagram]\label{def:commutative diagram}
-	A diagram \emph{commutes} if, for any pair of paths through the
-	diagram with the same start and end, the composite morphisms are equal.
+	A diagram\note{The notion of a diagram can be made precise fairly easily;
+		see~\cite[Section 1.6]{riehl-2017}.} \emph{commutes} if, for any pair of paths
+	through the diagram with the same start and end, the composite morphisms are
+	equal.
 \end{dfn}
-
-\noindent
-The notion of a diagram can be made precise fairly easily; see~\cite[Section 1.6]{riehl-2017}.
 
 \begin{ex}
 	In this language, the axioms of \Cref{def:category} are expressed by commutativity of the
-	following diagrams:
-	\begin{figure}[H]
-		\centering
-		\begin{tikzcd}
-			x\ar[r, "f"]\ar[rr, "gf", bend left=60] &
-			y\ar[r, "g"]\ar[rr, "hg"', bend right=60] &
-			z\ar[r, "h"] & w
-		\end{tikzcd}
-		\begin{tikzcd}
-			x\ar[r, "1_x"]\ar[rd, "f"'] & x\ar[d, "f"] \\
-			& y
-		\end{tikzcd}
-		\begin{tikzcd}
-			x\ar[r, "f"]\ar[rd, "f"'] & y\ar[d, "1_y"] \\
-			& y\punctuation{.}
-		\end{tikzcd}
-	\end{figure}
+	diagrams in \Cref{fig:category axioms}.
 \end{ex}
