improve tufte code

--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -33,6 +33,7 @@
 % figs
 \usepackage{float}
 \usepackage{tikz-cd}
+\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{mathpartir}
 \usepackage{adjustbox}
