--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -18,7 +18,6 @@
 	isbn = 9781466570269,
 	lccn = 2014039042,
 	series = "Chapman \& Hall/CRC Cryptography and Network Security Series",
-	url = "https://books.google.com/books?id=OWZYBQAAQBAJ",
 	year = 2014,
 	publisher = "Taylor \& Francis",
 }
@@ -140,5 +139,20 @@
 	eprint = { https://doi.org/10.1137/S0097539791220688 },
 }
 
+@misc{canetti-2008,
+	author = {Ran Canetti},
+	title = {Lecture 11},
+	month = {Spring},
+	year = {2008},
+	collection = {Introduction to Cryptography},
+	url = {https://www.cs.tau.ac.il/~canetti/f08-materials/scribe11.pdf},
+}
 
+	@book{goldreich-2001,
+	title = {Foundations of Cryptography: Volume 1, Basic Tools},
+	author = {Goldreich, O.},
+	isbn = {9780521791724},
+	year = {2001},
+	publisher = {Cambridge University Press},
+}
 
