--- a/writeup/cryptography.tex
+++ b/writeup/cryptography.tex
@@ -11,11 +11,11 @@ discuss a motivating example.\note{Many more examples can be found in any
 
 \section{Commitment Protocols}
 
-Suppose we want to build an online rock-paper-scissors game. If two players,
-Alice and Bob, want to play, then they should both be able to send each other a
-move and so determine the winner. However, something needs to prevent the
-players from waiting until after they learn the other's move to choose their own
-move. This is an ideal use-case for a \emph{commitment protocol}.
+Suppose we want to build an online rock-paper-scissors game. Two players, Alice
+and Bob, should both be able to send each other a move and so determine the
+winner. However, something needs to prevent the players from waiting until after
+they learn the other's move to choose their own move. This is an ideal use-case
+for a \emph{commitment protocol}.
 
 Informally, a commitment protocol proceeds as follows. The sender $S$ has a
 message $m$ that they wish to commit to---in our case, $m$ is one of
@@ -129,6 +129,7 @@ As with commitment, we can define correctness of this protocol.
 \end{proof}
 
 \noindent
+Furthermore,
 At least in this case, it was easy to define notions of correctness that
 compose. Our task now is to define security of commitment and
 rock-paper-scissors such that, whenever a commitment scheme is secure,
@@ -158,11 +159,11 @@ committed message. Formally:
 			      \item $R'_n$ outputs a guess $b'\in\{0, 1\}$. $R'_n$ wins if $b' =
 				      b$.
 		      \end{game}
-		      A commitment scheme is \emph{hiding} if for any family of adversaries
-		      $R'_n$, \[
+		      A commitment scheme is \emph{hiding} if for any family of
+		      probabalistic polynomial-time algorithms $R'_n$, \[
 			      \Pr[R'_n\text{ wins \Cref{game:hiding}}] \leq \frac{1}{2} + \negl.
 		      \]
-		      The idea is that $R'$ participates in the commitment phase for a randomly
+		      The idea is that $R'_n$ participates in the commitment phase for a randomly
 		      chosen message $m_b$, and then tries to guess $b$; they should be able
 		      to guess no more than negligibly\note{A function is \emph{negligible},
 			      written $\negl$, if it is asymptotically smaller than any rational
@@ -177,12 +178,43 @@ committed message. Formally:
 			      \item $S'_n$ wins if $R_n$ outputs $m_b$.
 		      \end{game}
 
-		      A commitment scheme is \emph{binding} if for any family of adversaries
-		      $S'_n$, \[
+		      A commitment scheme is \emph{binding} if for any family of
+		      probabalistic polynomial-time algorithms $S'_n$, \[
 			      \Pr[S'_n\text{ wins \Cref{game:binding}}] \leq \frac{1}{2} + \negl.
 		      \]
+		      The idea is that $S'_n$ first makes a commitment, and then learns
+		      which of two messages they want to reveal to $R_n$; they should be
+		      able to do no more than negligibly better than guessing which of the
+		      two messages to commit to before learning the random bit.
 	\end{itemize}
 \end{dfn}
+
+\noindent
+Similarly, we can define security of \Cref{prot:rock-paper-scissors} by having
+the adversary play against an honest party who moves uniform at random.
+
+\begin{dfn}
+	\Cref{prot:rock-paper-scissors} is \emph{game-secure} relative to a commitment
+	protocol $(S_n,R_n)$ if the following hold:
+	\begin{itemize}
+		\item \emph{A-security}: For any family of PPT\note{Probabalistic
+			      polynomial-time, though this definition can be made relative to any class
+			      of adversarial algorithms.} algorithms $A'_n$,\[
+			      \Pr[\pr_2(\alg{RPS}_{A'_n}(a,b)) = 1] \leq \frac{1}{3} + \negl,
+		      \]
+		      where the randomness is over uniform choice of $a,b\in\cM$.
+		\item \emph{B-security}: For any family of PPT algorithms $B'_n$,\[
+			      \Pr[\pr_1(\alg{RPS}^{B'_n}(a,b)) = -1] \leq \frac{1}{3} + \negl,
+		      \]
+		      where the randomness is over uniform choice of $a,b\in\cM$.
+	\end{itemize}
+\end{dfn}
+
+\noindent
+In particular, when the adversary controls $A$, we care only that $B$ outputs a
+fair view of the game, and when the adversary controls $B$, we only care that
+$A$ outputs a fair view of the game: we can never prevent the adversary from
+just outputting that they win.
 
 \section{Simulation-Based Security}
 
